Tests+swagger+fixes implemented
