# src/app/Models/Product.php
@@ -4,6 +4,7 @@ declare(strict_types=1);
 
 namespace App\Models;
 
+use Database\Factories\ProductFactory;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\SoftDeletes;
 use Illuminate\Database\Eloquent\Model;
@@ -11,7 +12,9 @@ use Illuminate\Database\Eloquent\Relations\BelongsTo;
 
 class Product extends Model
 {
-    use HasFactory, SoftDeletes;
+    /** @use HasFactory<ProductFactory> */
+    use HasFactory;
+    use SoftDeletes;
 
     protected $fillable = [
         'category_id',
@@ -32,6 +35,7 @@ class Product extends Model
         'attributes' => 'array',
     ];
 
+    /** @return BelongsTo<Category, $this>  */
     public function category(): BelongsTo
     {
         return $this->belongsTo(Category::class);
